sem_12 fixed text alignment

--- a/Sem_11/style.css
+++ b/Sem_11/style.css
@@ -5,6 +5,10 @@
     outline: none;
 }
 
+.container{
+    width: 100%;
+}
+
 img {
     max-width: 100%;
   }
@@ -36,27 +40,40 @@ img {
 /* background preview */
 
 .background_preview_content{
+    width: 100%;
     display: flex;
-    /* flex-direction: row; */
     background: #F1E4E6;
-    padding-left: calc(50% - 800px);
-    padding-right: calc(50% - 800px);
-    margin-bottom: 65px;
-       
+    padding-left: 2%;
+    padding-right: 2%;
+    margin-bottom: 10%;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* justify-content: space-around; */
 }
 
-.background_left, .background_right{
-    width: 50%;
+.background_left{
+    width: 40%;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
 .background_right{
+    width: 40%;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 2em;
 }
 
+.background_pic{
+    width: 100%;
+}
+
 .background_item{
     padding-right: 1em;
+    max-width: 80%;
+    max-height: 20%;
 }
 
 /* offer block */
@@ -67,10 +84,12 @@ img {
     margin-right: 5%;
     margin-left: 5%;
     margin-bottom: 10%;
+    justify-content: center;
 }
 
 .offer_block{
     position: relative;
+    margin: auto;
 }
 
 .bottom_offer_block{
